# myshop

./: .gitignore  06 Project M3-1.md  Dockerfile  README.md  commands.txt  compose.yaml  pyproject.toml  requirements.txt
api/: serializers.py  urls.py  views.py
core/: settings.py  urls.py
orders/: cart.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_order_status.py
products/: admin.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_product_weight.py  0003_product_unit_alter_product_weight.py  0004_alter_product_unit.py
reviews/: models.py
reviews/migrations/: 0001_initial.py
static/css/: main.css  main_css.css
static/js/: main_js.js
templates/: base.html
templates/orders/: cart.html  checkout.html  success.html
templates/products/: catalog.html  guides-recipes.html  product_detail.html
templates/users/: forgot_password.html  history.html  login.html  register.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
